syntax = "proto3";

package DistributedFileSystem;

service NameService{
    rpc startServer(ServerInfo) returns(ServerInfo) {}
    rpc terminateServer(ServerInfo) returns(ServerInfo) {}
    rpc beginGetTransaction(FileInfo) returns(stream BlockStore) {}
    rpc commitGetTransaction(FileInfo) returns(FileInfo) {}
    rpc abortGetTransaction(FileInfo) returns(FileInfo) {}
    rpc beginPutTransaction(FileInfo) returns(stream BlockStore) {}
    rpc updateBlockInfo(BlockInfo) returns(BlockInfo) {}
}

service DataService{
    rpc getBlock(BlockInfo) returns (stream BlockUnit) {}
    rpc putBlock(stream BlockUnit) returns (BlockInfo) {}
    rpc rmBlock(BlockInfo) returns (BlockInfo) {}
}

message ServerInfo{
    string address = 1;
    bytes hash = 2;
}

message FileInfo{
    string fileName = 1;
    uint64 fileSize = 2;
}

message BlockStore{
    string serverAddress = 1;
    bytes serverHash = 2;
    string fileName = 3;
    uint64 blockIdx = 4;
    uint64 blockSize = 5;
    bytes blockHash = 6;
}

message BlockInfo{
    string fileName = 1;
    uint64 blockIdx = 2;
    uint64 blockSize = 3;
    bytes blockHash = 4;
}

message BlockUnit{
    string fileName = 1;
    uint64 blockIdx = 2;
    uint64 unitIdx = 3;
    bytes unitData = 4;
    bool lastUnit = 5;
}
